--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </p>
         </div>
       
-        <div class="grid-child">
+        <div class="flex-child">
           <h3>Correspondence</h3>
           <p>
             Exceptional Realty<br>
@@ -45,7 +45,7 @@
           </p>
         </div>
 
-        <div class="grid-child">
+        <div class="flex-child">
           <h3>Links</h3>
           <p>
             <a href="#" target="_blank">Home Restoration</a><br>
@@ -53,7 +53,7 @@
             <a href="#" target="_blank">Professional Moving Crew</a>
           </p>
         </div>
-      <div class="grid-child">
+      <div class="flex-child">
         <h3>Follow</h3>
         <p>
           <a href="#" target="_blank">YouTube</a><br>
